Background on mobile fixed

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -68,7 +68,7 @@ $DarkGray: hsl(0, 0%, 59%);
 	.header {
 		height: 45vh;
 		background-image: url(@/img/pattern-bg-mobile.png);
-		background-size: auto;
+		background-size: cover;
 	
 		h1 {
 			font-size: 2.55rem;
